fix icon alignment

--- a/src/style/scss/objects/_nav.scss
+++ b/src/style/scss/objects/_nav.scss
@@ -26,7 +26,7 @@
     &.ion-android-arrow-dropdown {
       font-size: 18px;
       vertical-align: top;
-      line-height: 29px;
+      line-height: 1;
       margin-left: 4px;
     }
   }
